<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E91E63"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#00BCD4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_button_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="@string/ques1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioq4_wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option1forques1"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioq1ans"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/answerforques1"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioq2wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option3forques1"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioq4wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option4forques1"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_button_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:background="#FF8F00"
                android:text="@string/ques2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:background="#EF6C00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio1wrng"
                    android:background="#00838F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option1forques2"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio2wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option2forques2"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioq3wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option3forques2"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioq4ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/answerforques2"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_button_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:background="#558B2F"
                android:text="@string/ques3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:background="#D84315"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option1forques3"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option2forques3"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q3ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/answerforques3"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q4wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option4forques3"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_button_question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:background="#00E5FF"
                android:text="@string/ques4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:background="#76FF03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_q1wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="#C6FF00"
                    android:paddingLeft="10dp"
                    android:text="@string/option1forques4"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q2wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option2forques4"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q3wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option3forques4"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q4ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/answerforques4"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:background="#FF3D00"
                android:text="@string/ques5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC400">

                <RadioButton
                    android:id="@+id/radio_buttonq1wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option1forques5"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_buttonq3wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option2forques5"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_q5ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/answerforques5"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_buttonq4wrng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/option4forques5"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#2979FF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="@string/ques6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/elon" />

            <EditText
                android:id="@+id/edit_text_ans6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="Type here"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#1DE9B6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="@string/ques7"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_q7_wrng1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1forques7"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_q7_ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1forques7" />

            <CheckBox
                android:id="@+id/check_q7_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2forques7"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_q7_wrng2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4forques7"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="reset"
                android:text="RESET" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="submit"
                android:text="SUBMIT" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>